--- a/bower.json
+++ b/bower.json
@@ -7,7 +7,10 @@
   ],
   "license": "MIT",
   "keywords": [
-    "angular", "ui-bootstrap", "ui-router", "modal"
+    "angular",
+    "ui-bootstrap",
+    "ui-router",
+    "modal"
   ],
   "moduleType": [],
   "homepage": "remydufour.com",
@@ -15,7 +18,12 @@
     "**/.*",
     "node_modules",
     "bower_components",
-    "test",
-    "tests"
-  ]
+    "test"
+  ],
+  "devDependencies": {
+    "angular": "^1.5.1",
+    "angular-mocks": "^1.5.1",
+    "angular-ui-router": "^0.2.18",
+    "angular-bootstrap": "^1.2.4"
+  }
 }
